[package]
authors = ["FancyFlame"]
edition = "2018"
name = "mcmu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
clap = "2"
hex = "0"
lazy_static = "1"
rand = "0"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1.8", features = ["net", "rt-multi-thread", "macros", "time", "sync", "io-util"]}
anyhow = "1"
